Module 5 - Week 1 - Day 4

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Modulo 5 React",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
